--- a/views/projects.pug
+++ b/views/projects.pug
@@ -1,11 +1,16 @@
 extends layout
 
+mixin projectblock(project)
+  a.list-group-item(href='/projects/'+ project.project_id)
+    h4.list-group-item-heading= project.project_name
+    p.list-group-item-text Supervisor of the thesis: #{project.supervisor_name}
+	  
 block content
-  div
-    h1 List of project proposals
-    for project in projects
-      div
-        h2= project.project_name
+  div.inner.cover
+    h1.cover-heading List of project proposals
+    div.pre-scrollable
+      for project in projects
+        +projectblock(project)
 block li_signout
   if(user)
     li
