--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32,7 +32,6 @@ body {
 body {
   color: #fff;
   text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -116,7 +115,9 @@ body {
   padding: 10px 20px;
   font-weight: bold;
 }
-
+.list-group-item {
+  text-align: left;
+}
 
 /*
  * Footer
