--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,12 +21,7 @@ html(lang="en")
               h3(class="masthead-brand") Students` projects App
               nav
                 ul(class="nav masthead-nav")
-                  li
-                    a(href="/") Home
-                  li
-                    a(href="/projects") Projects
-                  block li_signin
-                  block li_signout
+                  block nav
           block content
           div(class="mastfoot")
             div(class="inner")
