--- a/views/index.pug
+++ b/views/index.pug
@@ -12,7 +12,7 @@ block content
     div(class="clear")
     a(href="/sign-out", class="sign-out") Log out ←
     div.row
-      div.col-xs-6
+      div.col-xs-6.pre-scrollable
         ul.list-group.do-drop#projects-list
           for project in projects
             +projectitem(project)
@@ -28,11 +28,14 @@ block content
         p(class="lead") Assigning student to projects App Using Node.js & MySQL.
         p(class="lead")
           a(href="/signin", class="btn btn-lg btn-default") Sign in
-block li_signout
+block nav
+  li.active
+   a(href="/") Home
+  li
+   a(href="/projects") Projects
   if(user)
     li
       a(href="/sign-out") Sign out
-block li_signin
-  if(!user)
+  else
     li
       a(href="/signin") Sign in
