--- a/views/projects.pug
+++ b/views/projects.pug
@@ -11,11 +11,14 @@ block content
     div.pre-scrollable
       for project in projects
         +projectblock(project)
-block li_signout
+block nav
+  li
+   a(href="/") Home
+  li.active
+   a(href="/projects") Projects
   if(user)
     li
       a(href="/sign-out") Sign out
-block li_signin
-  if(!user)
+  else
     li
       a(href="/signin") Sign in
