--- a/views/signin.pug
+++ b/views/signin.pug
@@ -11,6 +11,10 @@ block content
       if(error.length>0)
         div(class="alert alert-danger", role="alert")= error
       button(id="btnSignIn", class="btn btn-lg btn-primary btn-block", type="submit") Sign in
-block li_signin
+block nav
   li
+   a(href="/") Home
+  li
+   a(href="/projects") Projects
+  li.active
     a(href="/signin") Sign in
