about madal added

--- a/views/projects.pug
+++ b/views/projects.pug
@@ -20,7 +20,11 @@ block nav
   li
     a(href="/")
       span.glyphicon.glyphicon-home(aria-hidden="true")
-      span  Home 
+      span  Home  
+  li
+    a(data-toggle="modal", data-target="#aboutModal")
+      span.glyphicon.glyphicon-info-sign(aria-hidden="true")
+      span  About 
   li.active
     a(href="/projects")
       span.glyphicon.glyphicon-list-alt(aria-hidden="true")
