--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,7 +26,7 @@ html(lang="en")
             block nav
     div.container
       block content
-      div.modal.fade#aboutModal(role="dialog")
+      div.modal.fade#about_modal(role="dialog")
         div.modal-dialog
           div.modal-content
             div.modal-header
