--- a/views/signin.pug
+++ b/views/signin.pug
@@ -5,10 +5,10 @@ block content
     div.col-xs-4.col-xs-offset-4
       form(class="form-signin", action="/signin" method="post")
         h2.form-signin-heading.text-center Please sign in
-        label.sr-only(for="inputEmail") Your Email address 
-        input.form-control#inputEmail(type="email", name="email", placeholder="Email address", required="", autofocus="") 
-        label.sr-only(for="inputPassword") Password 
-        input.form-control#inputPassword(type="password", name="password", placeholder="Password", required="")
+        label.sr-only(for="input_email") Your Email address 
+        input.form-control#input_email(type="email", name="email", placeholder="Email address", required="", autofocus="") 
+        label.sr-only(for="input_password") Password 
+        input.form-control#input_password(type="password", name="password", placeholder="Password", required="")
         if(error.length>0)
           div.alert.alert-danger(role="alert")= error
         button.btn.btn-lg.btn-warning-2.btn-block(type="submit") Sign in
@@ -18,7 +18,7 @@ block nav
       span.glyphicon.glyphicon-home(aria-hidden="true")
       span  Home  
   li
-    a(data-toggle="modal", data-target="#aboutModal")
+    a(data-toggle="modal", data-target="#about_modal")
       span.glyphicon.glyphicon-info-sign(aria-hidden="true")
       span  About 
   li
