--- a/views/index.pug
+++ b/views/index.pug
@@ -11,49 +11,65 @@ mixin studentitem(student)
 block content
   div.row.row-content.row-no-border
     if(user)
-      div.col-xs-12
-        h3(align="center") Hello, #{user.student_title} #{user.student_surname}
-        p(style="padding:10px;")
-      div.col-xs-10.col-xs-offset-1
-        div.row.row-content
-          div.col-xs-12
-            h3 Please select the way you want to write a thesis
-          div.col-xs-12
-            form.form-horizontal(role="form")
-              div.btn-group.option-way(data-toggle="buttons")
-                label.btn.btn-lg.btn-warning-2.active
-                  input#by_oneself(type="radio", value="oneself", name="option-way", autocomplete="off", checked)
-                  span All by myself
-                label.btn.btn-lg.btn-warning-2
-                  input#in_a_group(type="radio", value="group", name="option-way", autocomplete="off")
-                  span In a group with...
-              select.selectpicker(data-style="btn-lg btn-warning-2 active invisible", data-live-search="true", multiple, data-max-options="2", title="(2 students max)", data-width="fit", data-size='8')
-                for student in students
-                  if(user.student_id != student.student_id)
-                    +studentitem(student)
-        div.row.row-content
-          div.col-xs-12
-            h3 Please choose projects and place them in preferred order
-              p(style="padding:20px;")
-          div.col-xs-6
-            ul.list-group.do-drop#projects_list
-              for project in projects
-                +projectitem(project)
-          div.col-xs-6
-            ul.list-group.do-drop#chosen_projects_list
-        div.row.row-content
-          div.alert.alert-danger.invisible
-            strong Warning! 
-            span.message 
-          div.col-xs-4.col-xs-offset-5
-            div.form-group
+      if(request)
+        div.col-xs-10.col-xs-offset-1
+          div.row.row-content.row-less-space                                
+            div.col-xs-12
+              h3(align="center") Your choice of projects
               p(style="padding:10px;")
-              button.btn.btn-warning-2.btn-lg#send_request(type="submit") Send Request
-      link(rel="stylesheet", href="/vendors/jquery-ui/jquery-ui.min.css")
-      link(rel="stylesheet", href="/vendors/bootstrap-select/dist/css/bootstrap-select.min.css")
-      script(src="/vendors/jquery-ui/jquery-ui.min.js")
-      script(src="/vendors/bootstrap-select/dist/js/bootstrap-select.min.js")
-      script(src="/js/home.js")
+            div.col-xs-12                
+              div.list-group 
+                - var i = 0;
+                for project in request.request_conf
+                  - ++i;
+                  +projectblock(i, project) 
+      else
+        div.col-xs-12
+          h3(align="center") Hello, #{user.student_title} #{user.student_surname}
+          p(style="padding:10px;")
+        div.col-xs-10.col-xs-offset-1
+          div.row.row-content
+            div.col-xs-12
+              h3 Please select the way you want to write a thesis
+            div.col-xs-12
+              form.form-horizontal(role="form")
+                div.btn-group.option-way(data-toggle="buttons")
+                  label.btn.btn-lg.btn-warning-2.active
+                    input#by_oneself(type="radio", value="oneself", name="option-way", autocomplete="off", checked)
+                    span All by myself
+                  label.btn.btn-lg.btn-warning-2
+                    input#in_a_group(type="radio", value="group", name="option-way", autocomplete="off")
+                    span In a group with...
+                select.selectpicker(data-style="btn-lg btn-warning-2 active invisible", data-live-search="true", multiple, data-max-options="2", title="(2 students max)", data-width="fit", data-size='8')
+                  for student in students
+                    if(user.student_id != student.student_id)
+                      +studentitem(student)
+          div.row.row-content
+            div.col-xs-12
+              h3 Please choose projects and place them in preferred order
+                p(style="padding:20px;")
+            div.col-xs-6
+              ul.list-group.do-drop#projects_list
+                for project in projects
+                  +projectitem(project)
+            div.col-xs-6
+              ul.list-group.do-drop#chosen_projects_list
+          div.row.row-content
+            div.alert.alert-danger.invisible
+              strong Warning! 
+              span.message 
+            div.alert.alert-success.invisible
+              strong Success! 
+              span.message
+            div.col-xs-4.col-xs-offset-5
+              div.form-group
+                p(style="padding:10px;")
+                button.btn.btn-warning-2.btn-lg#send_request(type="submit") Send Request
+        link(rel="stylesheet", href="/vendors/jquery-ui/jquery-ui.min.css")
+        link(rel="stylesheet", href="/vendors/bootstrap-select/dist/css/bootstrap-select.min.css")
+        script(src="/vendors/jquery-ui/jquery-ui.min.js")
+        script(src="/vendors/bootstrap-select/dist/js/bootstrap-select.min.js")
+        script(src="/js/home.js")
     else  
       div.col-xs-10.col-xs-offset-1
         h2.form-signin-heading.text-center Students` projects App
