--- a/views/layout.pug
+++ b/views/layout.pug
@@ -62,4 +62,4 @@ html(lang="en")
       div.container
         p(align="center") Students` projects App, by 
           a(href="https://nl.linkedin.com/in/maleydenis") Denis Maley
-        p(align="center") © Copyright 2017 Utrecht University 
+        p(align="center") Utrecht University © 2017 All rights reserved.
