--- a/views/projects.pug
+++ b/views/projects.pug
@@ -12,7 +12,7 @@ block content
             - var i = 0;
             for project in projects
               - ++i;
-              +projectblock(i, project
+              +projectblock(i, project)
 block nav
   li
     a(href="/")
