--- a/views/layout.pug
+++ b/views/layout.pug
@@ -55,7 +55,7 @@ html(lang="en")
                 group can be assigned to one project while unpopular projects may be dropped altogether.
                 Finally, the students should get a notification explaining which project they get assigned to.
             div.modal-footer
-              button.btn.btn-success.pull-center(type="submit", data-dismiss="modal")
+              button.btn.btn-warning-2.pull-center(type="submit", data-dismiss="modal")
                 span.glyphicon.glyphicon-ok 
                 span  Ok
     footer.footer
